# claude-orchestrator

./: .gitignore  CHANGES.md  CLAUDE.md  README.md  actions.py  app.py  auto_mode.py  benchmark_discover.py  benchmark_fast_table.py  benchmark_final.py  benchmark_perceived.py  benchmark_render.py  benchmark_textual_internals.py  benchmark_widget_count.py  brain.py  claude_session_screen.py  cleanup.py  cli.py  config.py  description_refresher.py  fast_table.py  key_diag.py  models.py  notifications.py  orch  orch-claude  orch-footer  orch-header  orch-sidebar  orch-switch-session  orch.py  orchestrator.tcss  profile_app.py  rendering.py  screens.py  session_bridge.py  sessions.py  state.py  terminal.py  test_terminal.py  (+8 more)
commands/: extract-todo.md  extract.md
rust/orch-session-engine/: Cargo.toml
rust/orch-session-engine/src/: db.rs  discovery.rs  main.rs  parser.rs  threading.rs  watcher.rs
tests/: conftest.py  test_actions.py  test_activity.py  test_app.py  test_auto_mode.py  test_brain.py  test_cleanup.py  test_config.py  test_description_refresher.py  test_imports.py  test_models.py  test_notifications.py  test_perf_throbber.py  test_rendering.py  test_sessions.py  test_state.py  test_threads.py  test_widgets.py
