[package]
name = "orch-session-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.35", features = ["bundled"] }
notify = "8"
nix = { version = "0.30", features = ["signal", "process", "fs", "user"] }
anyhow = "1"

[profile.release]
opt-level = 3
lto = true
